Added Car business Logic and pricing policy + tests
